# serial-term-rpc

./: Cargo.toml  README.md  build.rs
proto/: serial_terminal.proto
src/: lib.rs
