[package]
name = "serial_term_rpc"
version = "0.1.0"
authors = ["alexandremgo <alexandre.magaud@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the gRPC server: cargo run --bin serial_com_server
name = "server"
path = "src/bin/server.rs"

[dependencies]
serialport = "4.0.0"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.4"